clusters/prod/gateway/argocd-route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: argocd
  namespace: argocd
spec:
  parentRefs:
    - name: public
      namespace: gateway
      sectionName: https
  hostnames: [argocd.rootsher.dev]
  rules:
    - backendRefs:
        - name: argocd-server
          port: 80
