clusters/prod/gateway/grafana-route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: grafana
  namespace: monitoring
spec:
  parentRefs:
    - name: public
      namespace: gateway
      sectionName: https
  hostnames: [grafana.rootsher.dev]
  rules:
    - backendRefs:
        - name: kube-prometheus-stack-grafana
          port: 80
